k8s/kafka-sink-connector.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-sink-connector-service
spec:
  type: LoadBalancer
  selector:
    app: kafka-sink-connector
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-sink-connector-deployment
  labels:
    app: kafka-sink-connector
spec:
#  replicas: 2
  selector:
    matchLabels:
      app: kafka-sink-connector
  template:
    metadata:
      labels:
        app: kafka-sink-connector
    spec:
      containers:
        - name: kafka-sink-connector
          image: genewang0929/kafka-sink-connector:latest
          volumeMounts:
            - name: kafka-sink-connector-persistent-storage
              mountPath: /kafka-sink-connector-data
          ports:
            - containerPort: 8083
      volumes:
        - name: kafka-sink-connector-persistent-storage
          hostPath:
            path: /kafka-sink-connector-data
            type: DirectoryOrCreate
