k8s/transaction.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
spec:
  selector:
    app: transaction-monitor
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment
  labels:
    app: transaction-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-monitor
  template:
    metadata:
      labels:
        app: transaction-monitor
    spec:
      containers:
        - name: transaction-monitor
          image: genewang0929/transaction-monitor:latest
          ports:
            - containerPort: 8080
