k8s/transaction-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: transaction.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 8080
